--- a/src/custom.html
+++ b/src/custom.html
@@ -10,6 +10,8 @@
 <body>
 
     <h1 align="center">MathJSLab Calculator</h1>
+    
+    <p>This is a demo application of educational <a href="https://www.npmjs.com/package/mathjslab">MathJSLab npm package</a>.</p>
 
     <div id="calculator"></div>
 
