--- a/src/custom.html
+++ b/src/custom.html
@@ -15,7 +15,7 @@
 
     <h1 align="center">MathJSLab</h1>
 
-    <p>This is a demo application of educational <a href="https://www.npmjs.com/package/mathjslab">MathJSLab npm
+    <p>This is a demo application of educational <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab npm
             package</a>.</p>
 
     <div id="calculator"></div>
