--- a/src/custom.html
+++ b/src/custom.html
@@ -18,7 +18,7 @@
     <p>This is a demo application of educational <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab npm
             package</a>.</p>
 
-    <div id="calculator"></div>
+    <div id="mathjslab-calc"></div>
 
     <br />
 
