--- a/src/custom.html
+++ b/src/custom.html
@@ -9,6 +9,11 @@
     <meta name="author" content="Sergio Lindau" />
     <meta name="keywords" content="MathJSLab,mathematics,math,educational,MATLAB,Octave,MathML,interpreter,parser,yacc,bison,lex,flex,jison" />
     <meta name="robots" content="index,follow">
+    <script>
+        MathJSLabCalc = {
+            assets: 'https://cdn.jsdelivr.net/gh/sergiolindau/mathjslab-calculator/',
+        }
+    </script>
 </head>
 
 <body>
