--- a/src/custom.html
+++ b/src/custom.html
@@ -30,7 +30,7 @@
     </script>
 </head>
 
-<body onload="loadReadme()">
+<body onload="javascript:loadReadme()">
 
     <h1 align="center">MathJSLab</h1>
 
@@ -59,9 +59,7 @@
         </a>
     </p>
 
-    <p align="center">&copy; 2016 &mdash;
-        <script>document.write((new Date()).getFullYear())</script> Sergio Lindau
-    </p>
+    <p align="center">&copy; 2016 &mdash; <script>document.write((new Date()).getFullYear())</script> <a href="mailto:sergiolindau@gmail.com" target="_blank">Sergio Lindau</a> <a href="https://lattes.cnpq.br/3843370693067429" target="_blank"><img src="https://www.ufpb.br/ppgs/contents/imagens/logo-lattes.png" alt="Currículo Lattes" width="30" height="30" /></a></p>
 
 </body>
 
