--- a/src/custom.html
+++ b/src/custom.html
@@ -58,7 +58,7 @@
         </a>
     </p>
 
-    <p align="center">&copy; 2016 &mdash; <script>document.write((new Date()).getFullYear())</script> <a href="mailto:sergiolindau@gmail.com" target="_blank">Sergio Lindau</a> <a href="https://lattes.cnpq.br/3843370693067429" target="_blank"><img src="https://www.ufpb.br/ppgs/contents/imagens/logo-lattes.png" alt="Currículo Lattes" width="30" height="30" /></a></p>
+    <p align="center">&copy; 2016 &mdash; <script>document.write((new Date()).getFullYear())</script> <a href="mailto:sergiolindau@gmail.com" target="_blank">Sergio Lindau</a></p>
 
 </body>
 
