--- a/src/custom.html
+++ b/src/custom.html
@@ -34,8 +34,7 @@
 
     <h1 align="center">MathJSLab</h1>
 
-    <p>This is a demo application of the <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> <a href="https://en.wikipedia.org/wiki/Npm">npm package</a>, an emulator of a subset of the <a href="https://www.mathworks.com/" target="_blank">MATLAB®</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> language written completely in <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. This application is intended for educational purposes.
-        </p>
+    <p>This is a demo application of the <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> <a href="https://en.wikipedia.org/wiki/Npm">npm package</a>, an emulator of a subset of the <a href="https://www.mathworks.com/" target="_blank">MATLAB®</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> language written completely in <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. This application is intended for educational purposes.</p>
 
     <div id="mathjslab-calc"></div>
 
