--- a/src/custom.html
+++ b/src/custom.html
@@ -34,13 +34,15 @@
 
     <h1 id="title" align="center"><a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> Calculator</h1>
 
-    <p>This is a demo application of the <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> <a href="https://en.wikipedia.org/wiki/Npm">npm package</a>, an emulator of a subset of the <a href="https://www.mathworks.com/" target="_blank">MATLAB®</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> language written completely in <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. This application is intended for educational purposes.</p>
+    <p>This is a demo application of the <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> <a href="https://en.wikipedia.org/wiki/Npm">npm package</a>, an emulator of a subset of the <a href="https://www.mathworks.com/" target="_blank">MATLAB®</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> language written completely in <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. This application is intended for educational purposes. See the <a href="#notes">notes</a> for detailed information.</p>
 
     <div id="mathjslab-calc"></div>
 
     <br />
 
     <hr />
+
+    <a id="notes"></a>
 
     <div id="readme"></div>
 
