--- a/src/custom.html
+++ b/src/custom.html
@@ -58,6 +58,10 @@
 
     <p align="center">&copy; 2016 &mdash; <script>document.write((new Date()).getFullYear())</script> <a href="mailto:sergiolindau@gmail.com" target="_blank">Sergio Lindau</a> (<a href="http://lattes.cnpq.br/3843370693067429" target="_blank">Currículo Lattes</a>)</p>
 
+    <hr />
+
+    <a href='https://www.free-counters.org/'>https://www.free-counters.org/</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=9069ec39037226c528492a4e9dcc2ae2704dd5f8'></script>
+    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1087601/t/13"></script>
 </body>
 
 </html>
