--- a/src/custom.html
+++ b/src/custom.html
@@ -60,8 +60,8 @@
 
     <hr />
 
-    <a href='https://www.free-counters.org/'>https://www.free-counters.org/</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=9069ec39037226c528492a4e9dcc2ae2704dd5f8'></script>
-    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1087601/t/13"></script>
+    <p align="center"><a href='https://www.free-counters.org/'>https://www.free-counters.org/</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=9069ec39037226c528492a4e9dcc2ae2704dd5f8'></script>
+    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1087601/t/13"></script></p>
 </body>
 
 </html>
