--- a/src/custom.html
+++ b/src/custom.html
@@ -33,9 +33,9 @@
 
 <body onload="javascript:loadReadme()">
 
-    <h1 id="title" align="center"><a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> Calculator</h1>
+    <h1 align="center"><a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> Calculator</h1>
 
-    <p>This is a demo application of the <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> <a href="https://en.wikipedia.org/wiki/Npm" target="_blank">npm package</a>, an emulator of a subset of the <a href="https://www.mathworks.com/" target="_blank">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> language written completely in <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. This application is intended for educational purposes. See the <a href="#notes">notes</a> for detailed information.</p>
+    <p>This is a demo application of the <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> <a href="https://en.wikipedia.org/wiki/Npm" target="_blank">npm package</a> (<a href="https://github.com/sergiolindau/mathjslab" target="_blank">repository</a>), an emulator of a subset of the <a href="https://www.mathworks.com/" target="_blank">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> language written completely in <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. This application is intended for educational purposes. See the <a href="#notes">notes</a> for detailed information.</p>
 
     <div id="mathjslab-calc"></div>
 
@@ -57,11 +57,6 @@
     </p>
 
     <p align="center">&copy; 2016 &mdash; <script>document.write((new Date()).getFullYear())</script> <a href="mailto:sergiolindau@gmail.com" target="_blank">Sergio Lindau</a> (<a href="http://lattes.cnpq.br/3843370693067429" target="_blank">Currículo Lattes</a>)</p>
-
-    <hr />
-
-    <p align="center"><a href='https://www.free-counters.org/'>https://www.free-counters.org/</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=9069ec39037226c528492a4e9dcc2ae2704dd5f8'></script>
-    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1087601/t/13"></script></p>
 </body>
 
 </html>
