--- a/src/custom.html
+++ b/src/custom.html
@@ -5,15 +5,19 @@
 <head>
     <title>MathJSLab</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="description" content="An interpreter with language syntax like MATLAB/Octave" />
+    <meta name="description" content="An interpreter with language syntax like MATLAB®/Octave" />
     <meta name="author" content="Sergio Lindau" />
     <meta name="keywords" content="MathJSLab,mathematics,math,educational,MATLAB,Octave,MathML,interpreter,parser,grammar,yacc,bison,lex,flex,jison" />
     <meta name="robots" content="index,follow">
     <script>
-        function loadReadme() {
+        function loadText() {
             if (!document.location.href.startsWith('file:')) {
                 const container = document.getElementById('readme');
-                window.compatibleFetch('README.md')
+                window.compatibleFetch({
+                    en: 'README.md',
+                    es: 'LEAME.md',
+                    pt: 'LEIAME.md',
+                }[window.lang])
                     .then((response) => {
                         if (!response.ok) {
                             throw new Error('Network error.');
@@ -27,17 +31,37 @@
                         console.error(error);
                     });
             }
+            document.getElementById('title').innerHTML = {
+                    en: '<a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> Calculator',
+                    es: 'Calculadora <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a>',
+                    pt: 'Calculadora <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a>',
+                }[window.lang];
+            document.getElementById('abstract').innerHTML = {
+                    en: 'This is a demo application of the <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> <a href="https://en.wikipedia.org/wiki/Npm" target="_blank">npm package</a> (<a href="https://github.com/sergiolindau/mathjslab" target="_blank">repository</a>), an emulator of a subset of the <a href="https://www.mathworks.com/" target="_blank">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> language written completely in <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. This application is intended for educational purposes. See the <a href="#notes">notes</a> below for detailed information.',
+                    es: 'Esta es una aplicación de demostración del <a href="https://en.wikipedia.org/wiki/Npm" target="_blank">paquete npm</a> <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> (<a href="https://github.com/sergiolindau/mathjslab" target="_blank">repositorio</a>), un emulador de un subconjunto del lenguaje <a href="https://www.mathworks.com/" target="_blank">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> escrito completamente en <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. Esta aplicación está destinada a fines educativos. Consulte las <a href="#notes">notas</a> a continuación para obtener información detallada.',
+                    pt: 'Este é um aplicativo de demonstação do <a href="https://en.wikipedia.org/wiki/Npm" target="_blank">pacote npm</a> <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> (<a href="https://github.com/sergiolindau/mathjslab" target="_blank">repositório</a>), um emulador de um subconjunto da linguagem <a href="https://www.mathworks.com/" target="_blank">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> escrito completamente em <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. Este aplicativo é destinado a fins educacionais. Consulte as <a href="#notes">notas</a> abaixo para obter informações detalhadas.',
+                }[window.lang];
+            document.getElementById('github-repository').innerHTML = {
+                    en: 'GitHub Repository',
+                    es: 'Repositorio GitHub',
+                    pt: 'Repositório GitHub',
+                }[window.lang];
+            document.getElementById('curriculum').innerHTML = {
+                    en: 'Curriculum',
+                    es: 'Currículum',
+                    pt: 'Currículo Lattes',
+                }[window.lang];
         }
     </script>
 </head>
 
-<body onload="javascript:loadReadme()">
+<body onload="javascript:loadText()">
 
-    <h1 align="center"><a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> Calculator</h1>
+    <h1 id="title" align="center"></h1>
 
-    <p>This is a demo application of the <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> <a href="https://en.wikipedia.org/wiki/Npm" target="_blank">npm package</a> (<a href="https://github.com/sergiolindau/mathjslab" target="_blank">repository</a>), an emulator of a subset of the <a href="https://www.mathworks.com/" target="_blank">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> language written completely in <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. This application is intended for educational purposes. See the <a href="#notes">notes</a> for detailed information.</p>
+    <p id="abstract"></p>
 
-    <div id="mathjslab-calc"></div>
+    <div id="mathjslab-calculator"></div>
 
     <br />
 
@@ -52,11 +76,11 @@
                     d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
                 </path>
             </svg>
-            <span id="github-repository">GitHub Repository</span>
-        </a>
+            <span id="github-repository"></span>
+    </a>
     </p>
 
-    <p align="center">&copy; 2016 &mdash; <script>document.write((new Date()).getFullYear())</script> <a href="mailto:sergiolindau@gmail.com" target="_blank">Sergio Lindau</a> (<a href="http://lattes.cnpq.br/3843370693067429" target="_blank">Currículo Lattes</a>)</p>
+    <p align="center">&copy; 2016 &mdash; <script>document.write((new Date()).getFullYear())</script> <a href="mailto:sergiolindau@gmail.com" target="_blank">Sergio Lindau</a> (<a href="http://lattes.cnpq.br/3843370693067429" target="_blank"><span id="curriculum"></span></a>)</p>
 </body>
 
 </html>
