--- a/src/custom.html
+++ b/src/custom.html
@@ -58,6 +58,8 @@
 
 <body onload="javascript:loadText();document.getElementById('language').value=window.lang;">
 
+    <div align="right"><b>ISBN 978-65-00-84828-1</b></div>
+
     <h1 id="title" align="center"></h1>
 
     <p id="abstract"></p>
