--- a/src/custom.html
+++ b/src/custom.html
@@ -33,9 +33,9 @@
                     });
             }
             document.getElementById('title').innerHTML = {
-                en: '<a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> Calculator',
-                es: 'Calculadora <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a>',
-                pt: 'Calculadora <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a>',
+                en: '<a href="https://github.com/sergiolindau/mathjslab-calculator" target="_blank">MathJSLab Calculator</a>',
+                es: '<a href="https://github.com/sergiolindau/mathjslab-calculator" target="_blank">Calculadora MathJSLab</a>',
+                pt: '<a href="https://github.com/sergiolindau/mathjslab-calculator" target="_blank">Calculadora MathJSLab</a>',
             }[window.lang];
             document.getElementById('abstract').innerHTML = {
                 en: 'This is a demo application of the <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> <a href="https://en.wikipedia.org/wiki/Npm" target="_blank">npm package</a> (<a href="https://github.com/sergiolindau/mathjslab" target="_blank">repository</a>), an emulator of a subset of the <a href="https://www.mathworks.com/" target="_blank">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> language written completely in <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. This application is intended for educational purposes. See the <a href="#notes">notes</a> below for detailed information.',
