--- a/src/custom.html
+++ b/src/custom.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html
-    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html>
 
 <head>
     <title>MathJSLab</title>
@@ -10,6 +9,7 @@
     <meta name="keywords"
         content="MathJSLab,mathematics,math,educational,MATLAB,Octave,MathML,interpreter,parser,grammar,yacc,bison,lex,flex,jison" />
     <meta name="robots" content="index,follow">
+    <link rel="manifest" href="manifest.json" />
     <script>
         function loadText() {
             if (!document.location.href.startsWith('file:')) {
