--- a/src/custom.html
+++ b/src/custom.html
@@ -6,9 +6,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="An interpreter with language syntax like MATLAB®/Octave" />
     <meta name="author" content="Sergio Lindau" />
-    <meta name="keywords"
-        content="MathJSLab,mathematics,math,educational,MATLAB,Octave,MathML,interpreter,parser,grammar,yacc,bison,lex,flex,jison" />
+    <meta name="keywords" content="MathJSLab,mathematics,math,educational,MATLAB,Octave,MathML,interpreter,parser,grammar,ANTLR" />
     <meta name="robots" content="index,follow">
+    <link rel="icon" href="images/icons/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="manifest.json" />
     <script>
         function loadText() {
@@ -26,21 +27,26 @@
                         return response.text();
                     })
                     .then((readme) => {
-                        container.innerHTML = marked.parse(readme) + '\n<hr />';
+                        container.innerHTML = marked.parse(readme);
                     })
                     .catch((error) => {
                         console.error(error);
                     });
             }
             document.getElementById('title').innerHTML = {
-                en: '<a href="https://github.com/sergiolindau/mathjslab-calculator" target="_blank">MathJSLab Calculator</a>',
-                es: '<a href="https://github.com/sergiolindau/mathjslab-calculator" target="_blank">Calculadora MathJSLab</a>',
-                pt: '<a href="https://github.com/sergiolindau/mathjslab-calculator" target="_blank">Calculadora MathJSLab</a>',
+                en: '<a href="https://github.com/sergiolindau/mathjslab-calculator" target="_blank" rel="noopener">MathJSLab Calculator</a>',
+                es: '<a href="https://github.com/sergiolindau/mathjslab-calculator" target="_blank" rel="noopener">Calculadora MathJSLab</a>',
+                pt: '<a href="https://github.com/sergiolindau/mathjslab-calculator" target="_blank" rel="noopener">Calculadora MathJSLab</a>',
+            }[window.lang];
+            document.getElementById('subtitle').innerHTML = {
+                en: 'An interpreter with language syntax like <a href="https://www.mathworks.com/" target="_blank" rel="noopener">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank" rel="noopener">Octave</a>',
+                es: 'Un intérprete con sintaxis de lenguaje como <a href="https://www.mathworks.com/" target="_blank" rel="noopener">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank" rel="noopener">Octave</a>',
+                pt: 'Um interpretador com sintaxe de linguagem como o <a href="https://www.mathworks.com/" target="_blank" rel="noopener">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank" rel="noopener">Octave</a>',
             }[window.lang];
             document.getElementById('abstract').innerHTML = {
-                en: 'This is a demo application of the <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> <a href="https://en.wikipedia.org/wiki/Npm" target="_blank">npm package</a> (<a href="https://github.com/sergiolindau/mathjslab" target="_blank">repository</a>), an emulator of a subset of the <a href="https://www.mathworks.com/" target="_blank">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> language written completely in <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. This application is intended for educational purposes. See the <a href="#notes">notes</a> below for detailed information.',
-                es: 'Esta es una aplicación de demostración del <a href="https://es.wikipedia.org/wiki/Npm" target="_blank">paquete npm</a> <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> (<a href="https://github.com/sergiolindau/mathjslab" target="_blank">repositorio</a>), un emulador de un subconjunto del lenguaje <a href="https://www.mathworks.com/" target="_blank">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> escrito completamente en <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. Esta aplicación está destinada a fines educativos. Consulte las <a href="#notes">notas</a> a continuación para obtener información detallada.',
-                pt: 'Este é um aplicativo de demonstração do <a href="https://pt.wikipedia.org/wiki/Npm_(software)" target="_blank">pacote npm</a> <a href="https://www.npmjs.com/package/mathjslab" target="_blank">MathJSLab</a> (<a href="https://github.com/sergiolindau/mathjslab" target="_blank">repositório</a>), um emulador de um subconjunto da linguagem <a href="https://www.mathworks.com/" target="_blank">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank">Octave</a> escrito completamente em <a href="https://www.typescriptlang.org/" target="_blank">Typescript</a>. Este aplicativo é destinado a fins educacionais. Consulte as <a href="#notes">notas</a> abaixo para obter informações detalhadas.',
+                en: 'This is a demo application of the <a href="https://www.npmjs.com/package/mathjslab" target="_blank" rel="noopener">MathJSLab</a> <a href="https://en.wikipedia.org/wiki/Npm" target="_blank" rel="noopener">npm package</a> (<a href="https://github.com/sergiolindau/mathjslab" target="_blank" rel="noopener">repository</a>), an emulator of a subset of the <a href="https://www.mathworks.com/" target="_blank" rel="noopener">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank" rel="noopener">Octave</a> language written completely in <a href="https://www.typescriptlang.org/" target="_blank" rel="noopener">Typescript</a>. This application is intended for educational purposes. See the <a href="#notes">notes</a> below for detailed information.',
+                es: 'Esta es una aplicación de demostración del <a href="https://es.wikipedia.org/wiki/Npm" target="_blank" rel="noopener">paquete npm</a> <a href="https://www.npmjs.com/package/mathjslab" target="_blank" rel="noopener">MathJSLab</a> (<a href="https://github.com/sergiolindau/mathjslab" target="_blank" rel="noopener">repositorio</a>), un emulador de un subconjunto del lenguaje <a href="https://www.mathworks.com/" target="_blank" rel="noopener">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank" rel="noopener">Octave</a> escrito completamente en <a href="https://www.typescriptlang.org/" target="_blank" rel="noopener">Typescript</a>. Esta aplicación está destinada a fines educativos. Consulte las <a href="#notes">notas</a> a continuación para obtener información detallada.',
+                pt: 'Este é um aplicativo de demonstração do <a href="https://pt.wikipedia.org/wiki/Npm_(software)" target="_blank" rel="noopener">pacote npm</a> <a href="https://www.npmjs.com/package/mathjslab" target="_blank" rel="noopener">MathJSLab</a> (<a href="https://github.com/sergiolindau/mathjslab" target="_blank" rel="noopener">repositório</a>), um emulador de um subconjunto da linguagem <a href="https://www.mathworks.com/" target="_blank" rel="noopener">MATLAB&reg;</a>/<a href="https://www.gnu.org/software/octave/" target="_blank" rel="noopener">Octave</a> escrito completamente em <a href="https://www.typescriptlang.org/" target="_blank" rel="noopener">Typescript</a>. Este aplicativo é destinado a fins educacionais. Consulte as <a href="#notes">notas</a> abaixo para obter informações detalhadas.',
             }[window.lang];
             document.getElementById('github-repository').innerHTML = {
                 en: 'GitHub Repository',
@@ -57,49 +63,64 @@
 </head>
 
 <body onload="javascript:loadText();document.getElementById('language').value=window.lang;">
+    <div id="app">
 
-    <div align="right"><b>ISBN 978-65-00-84828-1</b></div>
+        <header>
+            <img alt="MathJSLab logo" class="logo" src="./images/mathjslab-logo.svg" width="125" height="125" />
+            <noscript>You need to enable JavaScript to run MathJSLab Calculator.</noscript>
+            <div class="header-wrapper">
+                <div class="header-panel">
+                    <h1 id="title" class="green"></h1>
+                    <h3 id="subtitle"></h3>
+                    <p><b>ISBN 978-65-00-84828-1</b></p>
+                </div>
+            </div>
+            <div class="right-align-panel">
+                <div class="green-panel width-fit-content right-align-panel">
+                    <select id="language"
+                        onchange="javascript:window.setLanguage(document.getElementById('language').value);loadText();">
+                        <option value="en">English</option>
+                        <option value="es">Español</option>
+                        <option value="pt">Português</option>
+                    </select>
+                </div>
+            </div>
+        </header>
 
-    <h1 id="title" align="center"></h1>
+        <main>
+            <p id="abstract"></p>
 
-    <p id="abstract"></p>
+            <div id="mathjslab-calculator"></div>
 
-    <div align="right">
-        <div class="good" style="width:6em;" align="center">
-            <select id="language"
-                onchange="javascript:window.setLanguage(document.getElementById('language').value);loadText();">
-                <option value="en">English</option>
-                <option value="es">Español</option>
-                <option value="pt">Português</option>
-            </select>
-        </div>
+            <br />
+
+            <hr />
+            <a id="notes"></a>
+            <div id="readme"></div>
+            <hr />
+        </main>
+
+        <footer>
+            <p align="center">
+                <a title="GitHub repository" href="https://github.com/sergiolindau/mathjslab-calculator"
+                    target="_blank" rel="noopener">
+                    <svg width="24" height="24" viewBox="0 0 16 16" version="1.1">
+                        <path fill-rule="evenodd"
+                            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
+                        </path>
+                    </svg>
+                    <span id="github-repository"></span>
+                </a>
+            </p>
+
+            <p align="center">&copy; 2016 &mdash;
+                <script>document.write((new Date()).getFullYear())</script> <a href="mailto:sergiolindau@gmail.com"
+                    target="_blank" rel="noopener">Sergio Lindau</a> (<a href="http://lattes.cnpq.br/3843370693067429"
+                    target="_blank" rel="noopener"><span id="curriculum"></span></a>)
+            </p>
+        </footer>
+
     </div>
-
-    <div id="mathjslab-calculator"></div>
-
-    <br />
-
-    <hr />
-
-    <a id="notes"></a>
-    <div id="readme"></div>
-
-    <p align="center">
-        <a title="GitHub repository" href="https://github.com/sergiolindau/mathjslab-calculator" target="_blank">
-            <svg width="24" height="24" viewBox="0 0 16 16" version="1.1">
-                <path fill-rule="evenodd"
-                    d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z">
-                </path>
-            </svg>
-            <span id="github-repository"></span>
-        </a>
-    </p>
-
-    <p align="center">&copy; 2016 &mdash;
-        <script>document.write((new Date()).getFullYear())</script> <a href="mailto:sergiolindau@gmail.com"
-            target="_blank">Sergio Lindau</a> (<a href="http://lattes.cnpq.br/3843370693067429" target="_blank"><span
-                id="curriculum"></span></a>)
-    </p>
 </body>
 
 </html>
