--- a/src/main.html
+++ b/src/main.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="An interpreter with language syntax like MATLAB®/Octave" />
     <meta name="author" content="Sergio Lindau" />
-    <meta name="keywords" content="MathJSLab,Mathematics,Educational,MATLAB,Octave,MathML,ANTLR,math,lexer,parser,grammar,interpreter" />
+    <meta name="keywords" content="MathJSLab,Mathematics,Educational,MATLAB,Octave,MathML,ANTLR,ANTLR4,math,lexer,parser,grammar,interpreter" />
     <meta name="robots" content="index,follow">
     <link rel="icon" href="images/icons/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -89,7 +89,7 @@
                 <div class="header-panel">
                     <h1 id="title" class="green"></h1>
                     <h3 id="subtitle"></h3>
-                    <p><b>ISBN 978-65-00-84828-1</b></p>
+                    <p><a href="https://grp.isbn-international.org/search/piid_solr?keys=978-65-00-84828-1" target="_blank" rel="noopener"><b>ISBN 978-65-00-84828-1</b></a></p>
                 </div>
             </div>
             <div class="right-align-panel">
