--- a/src/main.html
+++ b/src/main.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>MathJSLab</title>
-    <!-- Default tags -->
+    <!-- Default meta tags -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="An interpreter with language syntax like MATLAB®/Octave." />
     <meta name="author" content="Sergio Lindau" />
@@ -13,7 +13,7 @@
     <meta name="color-scheme" content="light dark" />
     <meta name="hostname" content="mathjslab.com" />
     <meta name="expected-hostname" content="mathjslab.com" />
-    <!-- Open Graph tags -->
+    <!-- Open Graph meta tags -->
     <meta property="og:title" content="MathJSLab" />
     <meta property="og:site_name" content="MathJSLab" />
     <meta property="og:description" content="An interpreter with language syntax like MATLAB®/Octave. ISBN 978-65-00-82338-7" />
@@ -23,13 +23,13 @@
     <meta property="og:image:alt" content="An interpreter with language syntax like MATLAB®/Octave. ISBN 978-65-00-82338-7" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <!-- Twitter tags -->
-    <meta name="twitter:image" content="https://avatars.githubusercontent.com/u/182827797?s=280&amp;v=4" />
+    <!-- Twitter meta tags -->
+    <meta name="twitter:image" content="https://mathjslab.com/images/mathjslab-logo-1200x630.png" />
     <meta name="twitter:site" content="@mathjslab" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="MathJSLab" />
     <meta name="twitter:description" content="MathJSLab - An interpreter with language syntax like MATLAB®/Octave. ISBN 978-65-00-82338-7" />
-
+    <!-- Icons and manifest -->
     <link rel="icon" href="images/icons/favicon.ico" />
     <link rel="manifest" href="manifest.json" />
     <script>
