--- a/src/main.html
+++ b/src/main.html
@@ -2,35 +2,36 @@
 <html>
 
 <head>
-    <title>MathJSLab</title>
+    <title><%= process.env.MATHJSLAB_APP_TITLE %></title>
     <!-- Default meta tags -->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="description" content="An interpreter with language syntax like MATLAB®/Octave." />
-    <meta name="author" content="Sergio Lindau" />
-    <meta name="keywords" content="MathJSLab,Mathematics,Educational,MATLAB,Octave,MathML,ANTLR,ANTLR4,math,lexer,parser,grammar,interpreter" />
+    <meta name="description" content="<%= process.env.MATHJSLAB_APP_DESCRIPTION_PKG_ISBN %>" />
+    <meta name="author" content="<%= process.env.MATHJSLAB_APP_AUTHOR %>" />
+    <meta name="keywords" content="<%= process.env.MATHJSLAB_APP_KEYWORDS %>" />
     <meta name="robots" content="index,follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="color-scheme" content="light dark" />
-    <meta name="hostname" content="mathjslab.com" />
-    <meta name="expected-hostname" content="mathjslab.com" />
+    <meta name="hostname" content="<%= process.env.MATHJSLAB_APP_HOSTNAME %>" />
+    <meta name="expected-hostname" content="<%= process.env.MATHJSLAB_APP_HOSTNAME %>" />
     <!-- Open Graph meta tags -->
-    <meta property="og:title" content="MathJSLab" />
-    <meta property="og:site_name" content="MathJSLab" />
-    <meta property="og:description" content="An interpreter with language syntax like MATLAB®/Octave. ISBN 978-65-00-82338-7" />
-    <meta property="og:url" content="https://mathjslab.com/" />
+    <meta property="og:title" content="<%= process.env.MATHJSLAB_APP_TITLE %>" />
+    <meta property="og:site_name" content="<%= process.env.MATHJSLAB_APP_TITLE %>" />
+    <meta property="og:description" content="<%= process.env.MATHJSLAB_APP_DESCRIPTION_PKG_ISBN %>" />
+    <meta property="og:url" content="<%= `${process.env.MATHJSLAB_APP_URL}/` %>" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://mathjslab.com/images/mathjslab-logo-1200x630.png" />
-    <meta property="og:image:alt" content="An interpreter with language syntax like MATLAB®/Octave. ISBN 978-65-00-82338-7" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image" content="<%= process.env.MATHJSLAB_APP_OG_IMAGE %>" />
+    <meta property="og:image:alt" content="<%= process.env.MATHJSLAB_APP_DESCRIPTION_PKG_ISBN %>" />
+    <meta property="og:image:width" content="<%= process.env.MATHJSLAB_APP_OG_IMAGE_WIDTH %>" />
+    <meta property="og:image:height" content="<%= process.env.MATHJSLAB_APP_OG_IMAGE_HEIGHT %>" />
     <!-- Twitter meta tags -->
-    <meta name="twitter:image" content="https://mathjslab.com/images/mathjslab-logo-1200x630.png" />
+    <meta name="twitter:image" content="<%= process.env.MATHJSLAB_APP_OG_IMAGE %>" />
     <meta name="twitter:site" content="@mathjslab" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="MathJSLab" />
-    <meta name="twitter:description" content="MathJSLab - An interpreter with language syntax like MATLAB®/Octave. ISBN 978-65-00-82338-7" />
+    <meta name="twitter:title" content="<%= process.env.MATHJSLAB_APP_TITLE %>" />
+    <meta name="twitter:description" content="<%= process.env.MATHJSLAB_APP_DESCRIPTION_PKG_ISBN %>" />
     <!-- Icons and manifest -->
-    <link rel="icon" href="images/icons/favicon.ico" />
+    <link rel="icon" href="images/favicon.ico" media="(prefers-color-scheme: light)">
+    <link rel="icon" href="images/favicon-dark.ico" media="(prefers-color-scheme: dark)">
     <link rel="manifest" href="manifest.json" />
     <script>
         function loadText() {
